--- a/vagrant-ansible/provisioning/playbook.yml
+++ b/vagrant-ansible/provisioning/playbook.yml
@@ -5,9 +5,14 @@
 - name: Basic setup for a 64bit Ubuntu Server
   hosts: nodejs-ubuntu
   sudo: yes
-  roles:
-    - basic-setup
+  #roles:
+  #  - basic-setup
 
 - name: Specific setup for the NodeJS PaaS
   hosts: nodejs-ubuntu
+  sudo: yes
+  vars_files:
+    - roles/nodejs-paas/defaults/git_variables.yml
+  roles:
+    - nodejs-paas
 
