refactored some variable names, files and authoring

--- a/vagrant-ansible/provisioning/roles/nodejs-paas/templates/upstart_nodejs-app.conf
+++ b/vagrant-ansible/provisioning/roles/nodejs-paas/templates/upstart_nodejs-app.conf
@@ -1,7 +1,7 @@
 # upstart script for NodeJS app
 
-description "node.js app"
-author      "DQuid srl"
+description "Node.js App"
+author      "marcello.mm.messori@gmail.com"
 
 start on mounted MOUNTPOINT=/run
 stop on shutdown
